[package]
name = "democutter"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
default-run = "cut"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cut"
path = "src/cut.rs"

[[bin]]
name = "bookmarks"
path = "src/bookmarks.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
bitbuffer = "0.10"
#tf-demo-parser = { version = "0.4", git = "https://github.com/demostf/parser" }
tf-demo-parser = { version = "0.4", path = "../tf-demo-parser" }
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
clap = { version = "3.1.9", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
expect-test = "1.2.2"
pretty_assertions = "1.2.1"
md5 = "0.7.0"

[profile.release]
lto = true

[profile.dev.package."*"]
opt-level = 3
